--- a/inst/test-data/run-example.Rmd
+++ b/inst/test-data/run-example.Rmd
@@ -11,21 +11,22 @@ knitr::opts_chunk$set(
   fig.height = 4, 
   fig.width = 7, 
   fig.path = file.path("fig", paste0(file_name, "-")),
-  error = FALSE)
+  error = FALSE, 
+  dpi = 300)
 options(digits = 3)
 ```
 
 Show configurations
 
 ```{r show_par}
-alpha
-omega 
-delta
-beta
-B
-sig # Sigma
-Psi
-n_obs
+dput(alpha)
+dput(omega)
+dput(delta)
+dput(gamma)
+dput(B)
+dput(sig) # Sigma
+dput(Psi)
+dput(n_obs)
 ```
 
 Define sampling functions
@@ -98,10 +99,17 @@ show_mark_mean <- function(B, Psi, sigma, m_func, g_func){
   n_y <- NCOL(sigma_chol)
   for(i in 1:16){
     U <- draw_U(Psi_chol, n_y = n_y)
-    y_non_rng <- t(eval_marker(tis, B = B, g_func = g_func, U = NULL, 
-                               offset = NULL, m_func = m_func))
-    y_rng     <- t(eval_marker(tis, B = B, g_func = g_func, U = U, 
-                               offset = NULL, m_func = m_func))
+    y_non_rng <- eval_marker(tis, B = B, g_func = g_func, U = NULL, 
+                             offset = NULL, m_func = m_func)
+    y_rng     <- eval_marker(tis, B = B, g_func = g_func, U = U, 
+                             offset = NULL, m_func = m_func)
+    if(!is.vector(y_non_rng)){
+      y_non_rng <- t(y_non_rng)
+      y_rng     <- t(y_rng)
+    } else {
+      y_non_rng <- as.matrix(y_non_rng)
+      y_rng     <- as.matrix(y_rng)
+    }
 
     sds <- sapply(tis, function(ti){
       M <- (diag(n_y) %x% m_func(ti))
@@ -110,8 +118,15 @@ show_mark_mean <- function(B, Psi, sigma, m_func, g_func){
       cbind(drop(G %*% c(B)) - 1.96 * sds,
             drop(G %*% c(B)) + 1.96 * sds)
     }, simplify = "array")
-    lbs <- t(sds[, 1, ])
-    ubs <- t(sds[, 2, ])
+    lbs <- sds[, 1, ]
+    ubs <- sds[, 2, ]
+    if(!is.vector(lbs)){
+      lbs <- t(lbs)
+      ubs <- t(ubs)
+    } else {
+      lbs <- as.matrix(lbs)
+      ubs <- as.matrix(ubs)
+    }
 
     y_obs <- sim_marker(B = B, U = U, sigma_chol = sigma_chol, 
                         m_func = m_func, r_n_marker = r_n_marker, 
@@ -123,10 +138,11 @@ show_mark_mean <- function(B, Psi, sigma, m_func, g_func){
     matplot(tis, y_rng    , type = "l", lty = 1, add = TRUE)
     matplot(y_obs$obs_time, y_obs$y_obs, type = "p", add = TRUE, pch = 3:4)
 
-    polygon(c(tis, rev(tis)), c(lbs[, 1], rev(ubs[, 1])), border = NA,
-            col = rgb(0, 0, 0, .1))
-    polygon(c(tis, rev(tis)), c(lbs[, 2], rev(ubs[, 2])), border = NA,
-            col = rgb(1, 0, 0, .1))
+    for(i in 1:NCOL(tis)){
+      rg <- col2rgb(i)
+      polygon(c(tis, rev(tis)), c(lbs[, i], rev(ubs[, i])), border = NA,
+              col = rgb(rg[1], rg[2], rg[3], .1))
+    }
 
   }
   invisible()
@@ -180,12 +196,12 @@ Simulate a data set
 
 ```{r sim_dat}
 set.seed(1)
-dat <- sim_joint_data_set(
+system.time(dat <- sim_joint_data_set(
   n_obs = n_obs, B = B, Psi = Psi, omega = omega, delta = delta, 
   alpha = alpha, sigma = sig, gamma = gamma, b_func = b_func, 
   m_func = m_func, g_func = g_func, gl_dat = gl_dat, r_z = r_z, 
   r_left_trunc = r_left_trunc, r_right_cens = r_right_cens, 
-  r_n_marker = r_n_marker, r_x = r_x, r_obs_time = r_obs_time, y_max = 10)
+  r_n_marker = r_n_marker, r_x = r_x, r_obs_time = r_obs_time, y_max = 10))
 ```
 
 Show stats
@@ -210,7 +226,8 @@ quantile(subset(dat$survival_data, event)$y)
 NROW(dat$marker_data) / NROW(dat$survival_data)
 ```
 
-Fixed mixed linear mixed model and see that we get the same estimates
+Fixed mixed linear mixed model and see that we get estimates which are close
+to the true values
 
 ```{r est_lin_mix}
 library(lme4)
@@ -234,22 +251,41 @@ local({
                   variable.name = "XXTHEVARIABLEXX", 
                   value.name = "XXTHEVALUEXX")
   
-  frm <- substitute(
-    XXTHEVALUEXX ~
-      XXTHEVARIABLEXX : ns_func(ti, g_ks) - 1L +
-      XXTHEVARIABLEXX : (ns_func(ti, m_ks) - 1L | i),
-    list(ti = as.name("obs_time"), i = as.name("id"), 
-         g_ks = as.name("g_ks"), m_ks = as.name("m_ks")))
-  frm <- eval(frm)
-  
-  if(d_x > 0)
-    for(i in rev(seq_len(d_x))){
-      frm_call <- substitute(
-        update(frm, . ~ XXTHEVARIABLEXX : x_var + .),
-        list(x_var = as.name(paste0("X", i))))
-      frm <- eval(frm_call)
-    }
+  if(length(alpha) > 1){
+    frm <- substitute(
+      XXTHEVALUEXX ~
+        XXTHEVARIABLEXX : ns_func(ti, g_ks) - 1L +
+        (XXTHEVARIABLEXX : ns_func(ti, m_ks) - 1L | i),
+      list(ti = as.name("obs_time"), i = as.name("id"), 
+           g_ks = as.name("g_ks"), m_ks = as.name("m_ks")))
+    frm <- eval(frm)
     
+    if(d_x > 0)
+      for(i in rev(seq_len(d_x))){
+        frm_call <- substitute(
+          update(frm, . ~ XXTHEVARIABLEXX : x_var + .),
+          list(x_var = as.name(paste0("X", i))))
+        frm <- eval(frm_call)
+      }
+    
+  } else {
+    frm <- substitute(
+      XXTHEVALUEXX ~
+        ns_func(ti, g_ks) - 1L +
+        (ns_func(ti, m_ks) - 1L | i),
+      list(ti = as.name("obs_time"), i = as.name("id"), 
+           g_ks = as.name("g_ks"), m_ks = as.name("m_ks")))
+    frm <- eval(frm)
+    
+    if(d_x > 0)
+      for(i in rev(seq_len(d_x))){
+        frm_call <- substitute(
+          update(frm, . ~ x_var + .),
+          list(x_var = as.name(paste0("X", i))))
+        frm <- eval(frm_call)
+      }
+  }
+        
   fit <- lmer(frm, lme_dat, control = lmerControl(
     check.conv.grad = .makeCC("ignore", tol = 1e-3, relTol = NULL)))
   
@@ -260,7 +296,7 @@ local({
   Psi <- vc$id
   attr(Psi, "correlation") <- attr(Psi, "stddev") <- NULL
   dimnames(Psi) <- NULL
-  K <- SimSurvNMarker:::get_commutation(n_y)
+  K <- SimSurvNMarker:::get_commutation(d_m, n_y)
   Psi <- tcrossprod(K %*% Psi, K)
 
   Sigma <- diag(attr(vc, "sc")^2, n_y)
@@ -269,11 +305,53 @@ local({
 })
 ```
 
-Compare with 
+Compare with the true values
 
-```{r}
+```{r true_lin_mix_par}
 gamma
 B
 Psi
 sig
+```
+
+Fit Cox model with only the observed markers (likely biased)
+
+```{r est_coxph}
+local({
+  library(survival)
+  tdat <- tmerge(dat$survival_data, dat$survival_data, id = id, 
+                 tstart = left_trunc, tstop = y, ev = event(y, event))
+  
+  for(i in seq_along(alpha)){
+    new_call <- substitute(tmerge(
+      tdat, dat$marker_data, id = id, tdc(obs_time, YVAR)),
+      list(YVAR = as.name(paste0("Y", i))))
+    names(new_call)[length(new_call)] <- paste0("Y", i)
+    tdat <- eval(new_call)
+  }
+  tdat <- na.omit(tdat)
+  
+  sformula <- Surv(left_trunc, y, event) ~ 1
+  for(i in seq_along(delta)){
+    new_call <- substitute(update(sformula, . ~ . + XVAR), 
+                           list(XVAR = as.name(paste0("Z", i))))
+    sformula <- eval(new_call)
+  }
+  for(i in seq_along(alpha)){
+    new_call <- substitute(update(sformula, . ~ . + XVAR), 
+                           list(XVAR = as.name(paste0("Y", i))))
+    sformula <- eval(new_call)
+  }
+  
+  fit <- coxph(sformula, tdat)
+  print(summary(fit))  
+  invisible(fit)
+})
+```
+
+Compare with the true value
+
+```{r true_coxph}
+delta
+alpha
 ```
