--- a/README.Rmd
+++ b/README.Rmd
@@ -93,17 +93,17 @@ m_ks <- seq(0, 10, length.out = 3)
 g_ks <- m_ks
 
 # simulation functions
-r_n_marker <- function()
+r_n_marker <- function(id)
   rpois(1, 10) + 1L
-r_obs_time <- function(n_markes)
+r_obs_time <- function(id, n_markes)
   sort(runif(n_markes, 0, 10))
-r_z <- function()
+r_z <- function(id)
   as.numeric(runif(1L) > .5)
-r_x <- function()
+r_x <- function(id)
   numeric()
-r_left_trunc <- function()
+r_left_trunc <- function(id)
    rbeta(1, 1, 2) * 3
-r_right_cens <- function()
+r_right_cens <- function(id)
   rbeta(1, 2, 1) * 6 + 4
 
 # model parameters
