add fits to README allow for derivatives add the last examples in manual pages

--- a/inst/test-data/run-example.Rmd
+++ b/inst/test-data/run-example.Rmd
@@ -353,7 +353,7 @@ local({
   }
   tdat <- na.omit(tdat)
   
-  sformula <- Surv(left_trunc, y, event) ~ 1
+  sformula <- Surv(left_trunc, y, ev) ~ 1
   for(i in seq_along(delta)){
     new_call <- substitute(update(sformula, . ~ . + XVAR), 
                            list(XVAR = as.name(paste0("Z", i))))
