--- a/vignettes/SimSurvNMarker.Rmd
+++ b/vignettes/SimSurvNMarker.Rmd
@@ -23,7 +23,7 @@ and marker model. Specifically, the package can simulate from the model
 <!-- \vec Y_{ij} \mid \vec U_i = \vec u_i -->
 <!--   &\sim N^{(r)}(\vec \mu_i(s_{ij}, \vec u_i), \Sigma) -->
 <!--   \\ -->
-<!-- \vec\mu(s, \vec u) &= -->
+<!-- \vec\mu_i(s, \vec u) &= -->
 <!--   \Gamma^\top \vec x_i + B^\top\vec g(s) + U^\top\vec m(s) -->
 <!--   \\ -->
 <!-- &= \left(I \otimes \vec x_i^\top\right)\text{vec}\Gamma -->
@@ -35,7 +35,7 @@ and marker model. Specifically, the package can simulate from the model
 <!-- h(t\mid \vec u) &= \exp\left( -->
 <!--   \vec\omega^\top\vec b(t) + -->
 <!--   \vec z_i^\top\vec\delta + -->
-<!--   \vec\alpha^\top\vec\mu(t, \vec u) -->
+<!--   \vec\alpha^\top\vec\mu_i(t, \vec u) -->
 <!--   \right) -->
 <!--   \\ -->
 <!-- &= \exp\Bigg( -->
@@ -50,7 +50,7 @@ and marker model. Specifically, the package can simulate from the model
 <!--   \Bigg) -->
 <!-- \end{align*}$$ -->
 
-$$\begin{align*}  \vec Y_{ij} \mid \vec U_i = \vec u_i    &\sim N^{(r)}(\vec \mu_i(s_{ij}, \vec u_i), \Sigma)    \\  \vec\mu(s, \vec u) &=    \Gamma^\top \vec x_i + B^\top\vec g(s) + U^\top\vec m(s)    \\  &= \left(I \otimes \vec x_i^\top\right)\text{vec}\Gamma       + \left(I \otimes \vec g(s)^\top\right)\text{vec} B       + \left(I \otimes \vec m(s)^\top\right) \vec u    \\  \vec U_i &\sim N^{(K)}(\vec 0, \Psi)    \\  h(t\mid \vec u) &= \exp\left(    \vec\omega^\top\vec b(t) +    \vec z_i^\top\vec\delta +    \vec\alpha^\top\vec\mu(t, \vec u)    \right)    \\  &= \exp\Bigg(    \vec\omega^\top\vec b(t) +    \vec z_i^\top\vec\delta    + \vec 1^\top\left(    \text{diag}(\vec \alpha) \otimes \vec x_i^\top\right)\text{vec}\Gamma    + \vec 1^\top\left(    \text{diag}(\vec \alpha) \otimes \vec g(t)^\top\right)\text{vec} B \\  &\hspace{50pt}+ \vec 1^\top\left(    \text{diag}(\vec \alpha) \otimes \vec m(t)^\top\right)\vec u    \Bigg)  \end{align*}$$
+$$\begin{align*}  \vec Y_{ij} \mid \vec U_i = \vec u_i    &\sim N^{(r)}(\vec \mu_i(s_{ij}, \vec u_i), \Sigma)    \\  \vec\mu_i(s, \vec u) &=    \Gamma^\top \vec x_i + B^\top\vec g(s) + U^\top\vec m(s)    \\  &= \left(I \otimes \vec x_i^\top\right)\text{vec}\Gamma       + \left(I \otimes \vec g(s)^\top\right)\text{vec} B       + \left(I \otimes \vec m(s)^\top\right) \vec u    \\  \vec U_i &\sim N^{(K)}(\vec 0, \Psi)    \\  h(t\mid \vec u) &= \exp\left(    \vec\omega^\top\vec b(t) +    \vec z_i^\top\vec\delta +    \vec\alpha^\top\vec\mu_i(t, \vec u)    \right)    \\  &= \exp\Bigg(    \vec\omega^\top\vec b(t) +    \vec z_i^\top\vec\delta    + \vec 1^\top\left(    \text{diag}(\vec \alpha) \otimes \vec x_i^\top\right)\text{vec}\Gamma    + \vec 1^\top\left(    \text{diag}(\vec \alpha) \otimes \vec g(t)^\top\right)\text{vec} B \\  &\hspace{50pt}+ \vec 1^\top\left(    \text{diag}(\vec \alpha) \otimes \vec m(t)^\top\right)\vec u    \Bigg)  \end{align*}$$
 
 where $\vec Y_{ij}\in\mathbb R^{n_y}$ is individual $i$'s 
 $j$th observed marker at time $s_{ij}$, 
@@ -58,7 +58,7 @@ $U_i\in\mathbb R^K$ is individual $i$'s random effect, and
 $h$ is the instantaneous hazard rate for the time-to-event outcome. 
 $\vec\alpha$ is the so-called
 association parameter. It shows the strength of the relation between the 
-latent mean function, $\vec\mu(t,\vec u)$, and the log of the 
+latent mean function, $\vec\mu_i(t,\vec u)$, and the log of the 
 instantaneous rate, $h(t\mid \vec u)$. $\vec m(t)$, $\vec g(t)$ 
 and $\vec b(t)$ are 
 basis expansions of time. As an example, these can be a polynomial, 
@@ -69,7 +69,12 @@ when a first polynomial is used and $\vec\alpha = \vec 0$. $\vec x_i$ and
 $\vec z_i$ are individual specific known covariates.
 
 We provide an example of how to use the package here and the 
-[inst/test-data](inst/test-data) directory.
+[inst/test-data](inst/test-data) directory. The purpose of the R package is 
+to 
+
+ - allow the user to specify all components in R including the basis 
+   functions. 
+ - simulate reasonably fast from the model given this requirement.
 
 ## Installation
 
@@ -80,13 +85,433 @@ stopifnot(require(remotes)) # need the remotes package
 install_github("boennecd/SimSurvNMarker")
 ```
 
-## Example
-We start by assigning all the variables that we will pass to the functions
-in the package.
+## Example: Polynomial
+We start with an example where we use polynomials as the basis functions. 
+First, we assign the polynomial functions we will use. 
+
+```{r poly_assign}
+b_func <- function(x){
+  x <- x - 1
+  cbind(x^3, x^2, x)
+}
+g_func <- function(x){
+  x <- x - 1
+  cbind(x^3, x^2, x)
+}
+m_func <- function(x){
+  x <- x - 1
+  cbind(x^2, x, 1)
+}
+```
+
+We use a third order polynomial for the two fixed terms, $\vec b$ and 
+$\vec g$, and a second order random polynomial for the random term, 
+$U \vec m(s)$, in the latent mean function. We choose the 
+following parameters for the baseline hazard.
 
 ```{r attach_pkg}
 library(SimSurvNMarker)
 ```
+
+```{r poly_base_haz}
+omega <- c(1.4, -1.2, -2.1)
+delta <- -.5 # the intercept
+
+# quadrature nodes
+gl_dat <- get_gl_rule(30L)
+
+# hazard function without marker
+par(mar = c(5, 5, 1, 1), mfcol = c(1, 2))
+plot(function(x) exp(drop(b_func(x) %*% omega) + delta),
+     xlim = c(0, 2), ylim = c(0, 1.5), xlab = "Time",
+     ylab = "Hazard (no marker)", xaxs = "i",  yaxs = "i", bty = "l")
+
+# survival function without marker
+plot(function(x) eval_surv_base_fun(x, omega = omega, b_func = b_func, 
+                                    gl_dat = gl_dat, delta = delta), 
+     xlim = c(1e-4, 2.5),
+     xlab = "Time", ylab = "Survival probability (no marker)", xaxs = "i",
+     yaxs = "i", bty = "l", ylim = c(0, 1.01))
+abline(h = .75, lty = 3)
+abline(h = .25, lty = 3)
+```
+
+Then we set the following parameters for the random effect, $\vec U_i$, and
+the parameters for the marker process. We also simulate a number of latent
+marker mean curves and observed values and plot the result. 
+The dashed curve is the mean, $\vec\mu_i(s, \vec 0)$, the 
+fully drawn curve is the individual specific curve, 
+$\vec\mu_i(s, \vec U_i)$,
+the shaded areas are pointwise 95% interval for each mean curve, and the 
+points are observed markers, $\vec y_{ij}$.
+
+```{r poly_marker_setup, fig.height=9, fig.width=9}
+r_n_marker <- function(id)
+  # the number of markers is Poisson distributed
+  rpois(1, 10) + 1L
+r_obs_time <- function(id, n_markes)
+  # the observations times are uniform distributed 
+  sort(runif(n_markes, 0, 2))
+
+Psi <- structure(c(0.18, 0.05, -0.05, 0.1, -0.02, 0.06, 0.05, 0.34, -0.25, 
+                   -0.06, -0.03, 0.29, -0.05, -0.25, 0.24, 0.04, 0.04, 
+                   -0.12, 0.1, -0.06, 0.04, 0.34, 0, -0.04, -0.02, -0.03, 
+                   0.04, 0, 0.1, -0.08, 0.06, 0.29, -0.12, -0.04, -0.08, 
+                   0.51), .Dim = c(6L, 6L))
+B <- structure(c(-0.57, 0.17, -0.48, 0.58, 1, 0.86), .Dim = 3:2)
+sig <- diag(c(.6, .3)^2)
+
+# function to simulate a given number of individuals' markers' latent means
+# and observed values
+show_mark_mean <- function(B, Psi, sigma, m_func, g_func, ymax){
+  tis <- seq(0, ymax, length.out = 100)
+  Psi_chol <- chol(Psi)
+  
+  par_old <- par(no.readonly = TRUE)
+  on.exit(par(par_old))
+  par(mar = c(4, 3, 1, 1), mfcol = c(4, 4))
+  
+  sigma_chol <- chol(sigma)
+  n_y <- NCOL(sigma_chol)
+  for(i in 1:16){
+    U <- draw_U(Psi_chol, n_y = n_y)
+    y_non_rng <- t(eval_marker(tis, B = B, g_func = g_func, U = NULL, 
+                               offset = NULL, m_func = m_func))
+    y_rng     <- t(eval_marker(tis, B = B, g_func = g_func, U = U, 
+                               offset = NULL, m_func = m_func))
+
+    sds <- sapply(tis, function(ti){
+      M <- (diag(n_y) %x% m_func(ti))
+      G <- (diag(n_y) %x% g_func(ti))
+      sds <- sqrt(diag(tcrossprod(M %*% Psi, M)))
+      cbind(drop(G %*% c(B)) - 1.96 * sds,
+            drop(G %*% c(B)) + 1.96 * sds)
+    }, simplify = "array")
+    lbs <- t(sds[, 1, ])
+    ubs <- t(sds[, 2, ])
+
+    y_obs <- sim_marker(B = B, U = U, sigma_chol = sigma_chol, 
+                        m_func = m_func, r_n_marker = r_n_marker, 
+                        r_obs_time = r_obs_time, g_func = g_func, 
+                        offset = NULL)
+
+    matplot(tis, y_non_rng, type = "l", lty = 2, ylab = "", xlab = "Time",
+            ylim = range(y_non_rng, y_rng, lbs, ubs, y_obs$y_obs))
+    matplot(tis, y_rng    , type = "l", lty = 1, add = TRUE)
+    matplot(y_obs$obs_time, y_obs$y_obs, type = "p", add = TRUE, pch = 3:4)
+
+    polygon(c(tis, rev(tis)), c(lbs[, 1], rev(ubs[, 1])), border = NA,
+            col = rgb(0, 0, 0, .1))
+    polygon(c(tis, rev(tis)), c(lbs[, 2], rev(ubs[, 2])), border = NA,
+            col = rgb(1, 0, 0, .1))
+
+  }
+  invisible()
+}
+set.seed(1)
+show_mark_mean(B = B, Psi = Psi, sigma = sig, m_func = m_func, 
+               g_func = g_func, ymax = 2)
+```
+
+As an example, we simulate the random effects and plot the conditional 
+hazards and survival functions. We start by assigning the association 
+parameter, $\vec\alpha$.
+
+```{r poly_show_cond_surv}
+alpha <- c(.5, .9)
+
+# function to plot simulated conditional hazards and survival 
+# functions
+sim_surv_curves <- function(sig, Psi, delta, omega, alpha, B, m_func, 
+                            g_func, b_func, ymax) {
+  par_old <- par(no.readonly = TRUE)
+  on.exit(par(par_old))
+  par(mfcol = c(1, 2), mar = c(5, 5, 1, 1))
+
+  # hazard functions
+  tis <- seq(0, ymax, length.out = 50)
+  n_y <- NCOL(sig)
+  Us <- replicate(100, draw_U(chol(Psi), n_y = n_y), 
+                  simplify = "array")
+
+  hz <- apply(Us, 3L, function(U)
+    vapply(tis, function(x)
+      exp(drop(delta + b_func(x) %*% omega +
+                 alpha %*% eval_marker(ti = x, B = B, m_func = m_func, 
+                                       g_func = g_func, U = U, 
+                                       offset = NULL))),
+      FUN.VALUE = numeric(1L)))
+
+  matplot(tis, hz, lty = 1, type = "l", 
+          col = rgb(0, 0, 0, .1), xaxs = "i", bty = "l", yaxs = "i", 
+          ylim = c(0, max(hz, na.rm = TRUE)), xlab = "time", 
+          ylab = "Hazard")
+
+  # survival functions
+  ys <- apply(Us, 3L, surv_func_joint,
+              ti = tis, B = B, omega = omega, delta = delta,
+              alpha = alpha, b_func = b_func, m_func = m_func, 
+              gl_dat = gl_dat, g_func = g_func, offset = NULL)
+
+  matplot(tis, ys, lty = 1, type = "l", col = rgb(0, 0, 0, .1),
+          xaxs = "i", bty = "l", yaxs = "i", ylim = c(0, 1),
+          xlab = "time", ylab = "Survival probability")
+  abline(h = .75, lty = 3)
+  abline(h = .25, lty = 3)
+}
+
+set.seed(1)
+sim_surv_curves(sig = sig, Psi = Psi, delta = delta, omega = omega, 
+                alpha = alpha, B = B, m_func = m_func, g_func = g_func, 
+                b_func = b_func, ymax = 2)
+```
+
+We end by assigning the functions to get the covariates, coefficients for 
+the fixed effects, the left-truncation function, and right-censoring 
+function. 
+
+```{r poly_assign_residuals}
+r_z <- function(id)
+  # return a design matrix for a dummy setup
+  cbind(1, (id %% 3) == 1, (id %% 3) == 2)
+r_z(1:6) # covariates for the first six individuals
+
+r_x <- r_z # same covariates for the fixed effects
+
+r_left_trunc <- function(id)
+  # no left-truncation
+  0
+r_right_cens <- function(id)
+  # right-censoring time is exponentially distributed
+  rexp(1, rate = .5)
+
+# fixed effect coefficients in the hazard
+delta_vec <- c(delta, -.5, .5)
+# fixed effect coefficients in the marker process 
+gamma <- matrix(c(.25, .5, 0, -.4, 0, .3), 3, 2)
+```
+
+A full data set can now be simulated as follows.
+
+```{r poly_sim_full, cache = 1}
+set.seed(70483614)
+system.time(dat <- sim_joint_data_set(
+  n_obs = 1000L, B = B, Psi = Psi, omega = omega, delta = delta_vec,
+  alpha = alpha, sigma = sig, b_func = b_func, g_func = g_func,
+  m_func = m_func, gl_dat = gl_dat, r_z = r_z, r_left_trunc = r_left_trunc, 
+  r_right_cens = r_right_cens, r_n_marker = r_n_marker, 
+  r_obs_time = r_obs_time, y_max = 2, gamma = gamma, r_x = r_x))
+```
+
+The first entries of the survival data and the observed marker looks as 
+follows.
+
+```{r poly_show_stats_sim_dat}
+# survival data
+head(dat$survival_data)
+
+# marker data
+head(dat$marker_data, 10)
+```
+
+To illustrate that we simulate from the correct model, we can estimate a 
+linear mixed models for the markers as follows. 
+
+```{r poly_est_lme, cache = 1, dependson = "poly_sim_full"}
+library(lme4)
+
+# estimate the linear mixed model (skip this if you want and look at the 
+# estimates in the end)
+local({
+  m_dat <- dat$marker_data
+  n_y <- NCOL(gamma)
+  d_x <- NROW(gamma)
+  d_g <- NROW(B)
+  d_m <- NROW(Psi) / n_y
+  
+  Y_names <- paste0("Y", 1:n_y)
+  id_vars <- c("id", "obs_time")
+  if(d_x > 0)
+    id_vars <- c(id_vars, paste0("X", seq_len(d_x)))
+  
+  lme_dat <- melt(m_dat, id.vars = id_vars, measure.vars = Y_names, 
+                  variable.name = "XXTHEVARIABLEXX", 
+                  value.name = "XXTHEVALUEXX")
+  
+  if(length(alpha) > 1){
+    if(length(B) > 0L)
+      frm <- substitute(
+        XXTHEVALUEXX ~
+          XXTHEVARIABLEXX : g_func(ti) - 1L +
+          (XXTHEVARIABLEXX : m_func(ti) - 1L | i),
+        list(ti = as.name("obs_time"), i = as.name("id")))
+    else 
+      frm <- substitute(
+        XXTHEVALUEXX ~
+          (XXTHEVARIABLEXX : m_func(ti, m_ks) - 1L | i),
+        list(ti = as.name("obs_time"), i = as.name("id")))
+    frm <- eval(frm)
+    
+    if(d_x > 0)
+      for(i in rev(seq_len(d_x))){
+        frm_call <- substitute(
+          update(frm, . ~ XXTHEVARIABLEXX : x_var + .),
+          list(x_var = as.name(paste0("X", i))))
+        frm <- eval(frm_call)
+      }
+    
+  } else {
+    if(length(B) > 0L)
+      frm <- substitute(
+        XXTHEVALUEXX ~
+          ns_func(ti, g_ks) - 1L +
+          (ns_func(ti, m_ks) - 1L | i),
+        list(ti = as.name("obs_time"), i = as.name("id"), 
+             g_ks = as.name("g_ks"), m_ks = as.name("m_ks")))
+    else 
+      frm <- substitute(
+        XXTHEVALUEXX ~
+          (ns_func(ti, m_ks) - 1L | i),
+        list(ti = as.name("obs_time"), i = as.name("id"), 
+             m_ks = as.name("m_ks")))
+    frm <- eval(frm)
+    
+    if(d_x > 0)
+      for(i in rev(seq_len(d_x))){
+        frm_call <- substitute(
+          update(frm, . ~ x_var + .),
+          list(x_var = as.name(paste0("X", i))))
+        frm <- eval(frm_call)
+      }
+  }
+        
+  fit <- lmer(frm, lme_dat, control = lmerControl(
+    check.conv.grad = .makeCC("ignore", tol = 1e-3, relTol = NULL)))
+  
+  gamma <- t(matrix(fixef(fit)[seq_len(d_x * n_y)], nr = n_y))
+  
+  B <- t(matrix(fixef(fit)[seq_len(d_g * n_y) + (d_x * n_y)], nr = n_y))
+  vc <- VarCorr(fit)
+  Psi <- vc$id
+  attr(Psi, "correlation") <- attr(Psi, "stddev") <- NULL
+  dimnames(Psi) <- NULL
+  K <- SimSurvNMarker:::get_commutation(n_y, d_m)
+  Psi <- tcrossprod(K %*% Psi, K)
+
+  Sigma <- diag(attr(vc, "sc")^2, n_y)
+
+  list(gamma = gamma, B = B, Psi = Psi, Sigma = Sigma)
+})
+```
+
+Although we assume equal noise variance, the estimates are close to the 
+true values.
+
+```{r comp_poly_est_lme}
+gamma
+B
+Psi
+sig
+```
+
+Fit Cox model with only the observed markers (likely biased but gives us an 
+idea about whether we are using the correct model).
+
+```{r poly_est_coxph}
+local({
+  library(survival)
+  tdat <- tmerge(dat$survival_data, dat$survival_data, id = id, 
+                 tstart = left_trunc, tstop = y, ev = event(y, event))
+  
+  for(i in seq_along(alpha)){
+    new_call <- substitute(tmerge(
+      tdat, dat$marker_data, id = id, tdc(obs_time, YVAR)),
+      list(YVAR = as.name(paste0("Y", i))))
+    names(new_call)[length(new_call)] <- paste0("Y", i)
+    tdat <- eval(new_call)
+  }
+  tdat <- na.omit(tdat)
+  
+  sformula <- Surv(left_trunc, y, ev) ~ 1
+  for(i in seq_along(delta_vec)){
+    new_call <- substitute(update(sformula, . ~ . + XVAR), 
+                           list(XVAR = as.name(paste0("Z", i))))
+    sformula <- eval(new_call)
+  }
+  for(i in seq_along(alpha)){
+    new_call <- substitute(update(sformula, . ~ . + XVAR), 
+                           list(XVAR = as.name(paste0("Y", i))))
+    sformula <- eval(new_call)
+  }
+  
+  fit <- coxph(sformula, tdat)
+  print(summary(fit))  
+  invisible(fit)
+})
+```
+
+This is close-ish to the true values.
+
+```{r comp_poly_est_coxph}
+delta_vec
+alpha
+```
+
+### Using Derivatives
+It is possible to use derivatives of the latent mean, 
+$\vec\mu_i(s, \vec u)$, with respect to time in the hazard. As an example, 
+we consider the first-order derivative below and plots conditional hazards
+and survival functions simulated from the new model. 
+
+```{r poly_derivs}
+g_func_surv <- function(x){
+  x <- x - 1
+  cbind(3 * x^2, 2 * x, 1)
+}
+m_func_surv <- function(x){
+  x <- x - 1
+  cbind(2 * x, 1, 0)
+}
+
+set.seed(1)
+sim_surv_curves(sig = sig, Psi = Psi, delta = delta, omega = omega, 
+                alpha = alpha, B = B, m_func = m_func_surv, 
+                g_func = g_func_surv, b_func = b_func, ymax = 2)
+```
+
+A new data set can now be simulated as follows. 
+
+```{r get_data_poly_derivs, cache = 1}
+set.seed(70483614)
+system.time(dat <- sim_joint_data_set(
+  n_obs = 1000L, B = B, Psi = Psi, omega = omega, delta = delta_vec,
+  alpha = alpha, sigma = sig, b_func = b_func, g_func = g_func,
+  m_func = m_func, gl_dat = gl_dat, r_z = r_z, r_left_trunc = r_left_trunc, 
+  r_right_cens = r_right_cens, r_n_marker = r_n_marker, 
+  r_obs_time = r_obs_time, y_max = 2, gamma = gamma, r_x = r_x, 
+  # the additions
+  m_func_surv = m_func_surv, g_func_surv = g_func_surv, 
+  use_fixed_latent = FALSE))
+```
+
+The first entries of the new data looks as follows.
+
+```{r derivs_poly_show_stats_sim_dat}
+# survival data
+head(dat$survival_data)
+
+# marker data
+head(dat$marker_data, 10)
+```
+
+```{r poly_clean_up, echo = FALSE}
+rm(list = ls()[!ls() %in% c("sim_surv_curves", "show_mark_mean")])
+```
+
+## Example: Natural Cubic Spline
+In this section, we will use natural cubic spline for the time-varying basis 
+functions. We start by assigning all the variables that we will pass to 
+the functions in the package.
 
 ```{r model_params, cache = 1}
 # quadrature nodes
@@ -135,7 +560,7 @@ the marker below.
 
 ```{r plot_wo_marker}
 # hazard function without marker
-par(mar = c(5, 5, 1, 1))
+par(mar = c(5, 5, 1, 1), mfcol = c(1, 2))
 plot(function(x) exp(drop(b_func(x) %*% omega)),
      xlim = c(1e-8, 10), ylim = c(0, .61), xlab = "Time",
      ylab = "Hazard (no marker)", xaxs = "i", bty = "l")
@@ -151,102 +576,22 @@ abline(h = .25, lty = 3)
 ```
 
 Next, we simulate individual specific markers. Each plot is for a given 
-individual. The dashed curve is the mean, $\vec\mu(s, \vec 0)$, the 
-fully drawn curve is the individual specific curve, $\vec\mu(s, \vec U_i)$,
-the shaded areas are pointwise 95% interval for each mean curve, and the 
-points are observed markers, $\vec y_{ij}$.
+individual.
 
 ```{r show_sim_marker, fig.height=9, fig.width=9}
 set.seed(1)
-show_mark_mean <- function(B, Psi, sigma, m_func, g_func){
-  tis <- seq(0, 10, length.out = 100)
-  Psi_chol <- chol(Psi)
-  
-  par_old <- par(no.readonly = TRUE)
-  on.exit(par(par_old))
-  par(mar = c(4, 3, 1, 1), mfcol = c(4, 4))
-  
-  sigma_chol <- chol(sigma)
-  n_y <- NCOL(sigma_chol)
-  for(i in 1:16){
-    U <- draw_U(Psi_chol, n_y = n_y)
-    y_non_rng <- t(eval_marker(tis, B = B, g_func = g_func, U = NULL, 
-                               offset = NULL, m_func = m_func))
-    y_rng     <- t(eval_marker(tis, B = B, g_func = g_func, U = U, 
-                               offset = NULL, m_func = m_func))
-
-    sds <- sapply(tis, function(ti){
-      M <- (diag(n_y) %x% m_func(ti))
-      G <- (diag(n_y) %x% g_func(ti))
-      sds <- sqrt(diag(tcrossprod(M %*% Psi, M)))
-      cbind(drop(G %*% c(B)) - 1.96 * sds,
-            drop(G %*% c(B)) + 1.96 * sds)
-    }, simplify = "array")
-    lbs <- t(sds[, 1, ])
-    ubs <- t(sds[, 2, ])
-
-    y_obs <- sim_marker(B = B, U = U, sigma_chol = sigma_chol, 
-                        m_func = m_func, r_n_marker = r_n_marker, 
-                        r_obs_time = r_obs_time, g_func = g_func, 
-                        offset = NULL)
-
-    matplot(tis, y_non_rng, type = "l", lty = 2, ylab = "", xlab = "Time",
-            ylim = range(y_non_rng, y_rng, lbs, ubs, y_obs$y_obs))
-    matplot(tis, y_rng    , type = "l", lty = 1, add = TRUE)
-    matplot(y_obs$obs_time, y_obs$y_obs, type = "p", add = TRUE, pch = 3:4)
-
-    polygon(c(tis, rev(tis)), c(lbs[, 1], rev(ubs[, 1])), border = NA,
-            col = rgb(0, 0, 0, .1))
-    polygon(c(tis, rev(tis)), c(lbs[, 2], rev(ubs[, 2])), border = NA,
-            col = rgb(1, 0, 0, .1))
-
-  }
-  invisible()
-}
 show_mark_mean(B = B, Psi = Psi, sigma = sig, m_func = m_func, 
-               g_func = g_func)
+               g_func = g_func, ymax = 10)
 ```
 
 We sample a number of random effects and plot the hazard curves and survival 
 functions given these random effects below. 
 
-```{r show_draw_surv_curves, cache = 1, dependson = "model_params"}
+```{r show_draw_surv_curves}
 set.seed(1)
-local({
-  par_old <- par(no.readonly = TRUE)
-  on.exit(par(par_old))
-  par(mfcol = c(1, 2))
-
-  # hazard functions
-  tis <- seq(1e-4, 10, length.out = 50)
-  n_y <- NCOL(sig)
-  Us <- replicate(100, draw_U(chol(Psi), n_y = n_y), 
-                  simplify = "array")
-
-  hz <- apply(Us, 3L, function(U)
-    vapply(tis, function(x)
-      exp(drop(delta + b_func(x) %*% omega +
-                 alpha %*% eval_marker(ti = x, B = B, m_func = m_func, 
-                                       g_func = g_func, U = U, 
-                                       offset = NULL))),
-      FUN.VALUE = numeric(1L)))
-
-  matplot(tis, hz, lty = 1, type = "l", col = rgb(0, 0, 0, .1),
-          xaxs = "i", bty = "l", yaxs = "i", ylim = c(0, 1),
-          xlab = "time", ylab = "Hazard")
-
-  # survival functions
-  ys <- apply(Us, 3L, surv_func_joint,
-              ti = tis, B = B, omega = omega, delta = delta,
-              alpha = alpha, b_func = b_func, m_func = m_func, 
-              gl_dat = gl_dat, g_func = g_func, offset = NULL)
-
-  matplot(tis, ys, lty = 1, type = "l", col = rgb(0, 0, 0, .1),
-          xaxs = "i", bty = "l", yaxs = "i", ylim = c(0, 1),
-          xlab = "time", ylab = "Survival probability")
-  abline(h = .75, lty = 3)
-  abline(h = .25, lty = 3)
-})
+sim_surv_curves(sig = sig, Psi = Psi, delta = delta, omega = omega, 
+                alpha = alpha, B = B, m_func = m_func, g_func = g_func, 
+                b_func = b_func, ymax = 10)
 ```
 
 We end by drawing a data set. We consider the time it takes in seconds by 
@@ -288,8 +633,3 @@ quantile(subset(dat$survival_data, event)$y)
 # fraction of observed markers per individual
 NROW(dat$marker_data) / NROW(dat$survival_data)
 ```
-
-## TODOs 
-
-* Allow for derivatives of $\vec\mu$ in the hazard.  
-* Provide example in the `man` files that needs it. 
