--- a/vignettes/SimSurvNMarker.Rmd
+++ b/vignettes/SimSurvNMarker.Rmd
@@ -15,7 +15,7 @@ knitr::opts_chunk$set(
 options(digits = 3)
 ```
 
-# SimSurvNMarker (Simulate Survival process and Markers)
+# SimSurvNMarker (Simulate Survival time and Markers)
 [![Build Status on Travis](https://travis-ci.org/boennecd/SimSurvNMarker.svg?branch=master,osx)](https://travis-ci.org/boennecd/SimSurvNMarker)
 
 The `SimSurvNMarker` package reasonably fast simulates from a joint survival 
