--- a/vignettes/SimSurvNMarker.Rmd
+++ b/vignettes/SimSurvNMarker.Rmd
@@ -16,7 +16,7 @@ options(digits = 3)
 ```
 
 # SimSurvNMarker: Simulate Survival time and Markers
-[![Build Status on Travis](https://travis-ci.org/boennecd/SimSurvNMarker.svg?branch=master,osx)](https://travis-ci.org/boennecd/SimSurvNMarker)
+[![R-CMD-check](https://github.com/boennecd/SimSurvNMarker/workflows/R-CMD-check/badge.svg)](https://github.com/boennecd/SimSurvNMarker/actions)
 [![](https://www.r-pkg.org/badges/version/SimSurvNMarker)](https://CRAN.R-project.org/package=SimSurvNMarker)
 [![CRAN RStudio mirror downloads](http://cranlogs.r-pkg.org/badges/SimSurvNMarker)](https://CRAN.R-project.org/package=SimSurvNMarker)
 
